Fix porting regression in translation memory

BUG: 490234